feat(order): get all ordered car for current seller and refactor checkout logic
