# storage/api-docs/api-docs.json
@@ -1048,7 +1048,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/cars/based-on-profile/{id}": {
@@ -1544,6 +1549,46 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Successful get data ordered cars",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "ok"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/orders/seller": {
+            "get": {
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Get all ordered cars based on current seller",
+                "description": "Get all ordered cars based on current seller",
+                "operationId": "getOrderedCarsBasedOnSeller",
                 "responses": {
                     "200": {
                         "description": "Successful get data ordered cars",
@@ -2960,46 +3005,6 @@
                                         "status": {
                                             "type": "integer",
                                             "example": "201"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "ok"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/wishlists/user": {
-            "get": {
-                "tags": [
-                    "wishlists"
-                ],
-                "summary": "Get all wishlists cars based on current user",
-                "description": "Get all wishlists cars based on current user",
-                "operationId": "getWishlistCar",
-                "responses": {
-                    "200": {
-                        "description": "Successful get data wishlists cars",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "integer",
-                                            "example": "200"
                                         },
                                         "message": {
                                             "type": "string",
